JOORSAND/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Quarter_Goal__c</fullName>
        <description>Goal for the current quarter. Used in % to goal reporting.</description>
        <inlineHelpText>Enter this user&apos;s goal for the quarter here. Update each quarter if the goal amount changes.</inlineHelpText>
        <label>Quarter Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The User&apos;s assigned region. For segmenting Accounts and Opportunities by region (team).</description>
        <inlineHelpText>The User&apos;s assigned region. For segmenting Accounts and Opportunities by region (team).</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LON</fullName>
                </value>
                <value>
                    <fullName>MIL</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Goal__c</fullName>
        <description>Goal for the current year. Used in % to goal reporting.</description>
        <inlineHelpText>Enter this user&apos;s goal for the year here. Update each year if the goal amount changes.</inlineHelpText>
        <label>Year Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Region__c</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Quarter_Goal__c</columns>
        <columns>Year_Goal__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>MARKETING_USER</columns>
        <columns>Region__c</columns>
        <columns>Quarter_Goal__c</columns>
        <columns>Year_Goal__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>KNOWLEDGE_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>